# Intelligentcar2022-FZ3B

./: .gitignore  README.md  上下位机串口通讯协议.xlsx  下位机UART接收解码程序模板.c
intelligentcar-fz3b/res/calibration/: calibration.xml
intelligentcar-fz3b/res/calibration/valid/: assessment.txt
intelligentcar-fz3b/res/model/mobilenet-ssd-v1/: config.json  label_list.txt  mobilenet-ssd-model
intelligentcar-fz3b/src/: CMakeLists.txt
intelligentcar-fz3b/src/config/: motion.json
intelligentcar-fz3b/src/include/: capture.hpp  common.hpp  detection.hpp  mat_util.hpp  model_config.hpp  predictor.hpp  preprocess.hpp  stop_watch.hpp  uart.hpp
intelligentcar-fz3b/src/src/: controlcenter_cal.cpp  icar.cpp  image_preprocess.cpp  motion_controller.cpp  perspective_mapping.cpp
intelligentcar-fz3b/src/src/detection/: busy_detection.cpp  slope_detection.cpp
intelligentcar-fz3b/src/src/recognition/: cross_recognition.cpp  freezone_recognition.cpp  garage_recognition.cpp  track_recognition.cpp
intelligentcar-fz3b/src/tool/: camera_display.cpp  capture.py  cart.py  collect.py  config.py  image2video.cpp  image_collection.cpp  joystick.py
